@@ -528,7 +528,6 @@ $PMA_SQPdata_reserved_word = array (
     'LAST_INSERT_ID',
     'LEADING',
     'LEFT',
-    'LEVEL',
     'LIKE',
     'LIMIT',
     'LINEAR',               // 5.1
@@ -697,7 +696,7 @@ $PMA_SQPdata_reserved_word = array (
  *
  * @global integer MySQL reserved words count
  */
-$PMA_SQPdata_reserved_word_cnt = 288;
+$PMA_SQPdata_reserved_word_cnt = 287;
 /**
  * The previous array must be sorted so that the binary search work.
  * Sometimes a word is not added in the correct order, so
@@ -933,7 +932,6 @@ $PMA_SQPdata_forbidden_word = array (
     'LEAVE',
     'LEAVES',
     'LEFT',
-    'LEVEL',
     'LIKE',
     'LIMIT',
     'LINEAR',               // 5.1
@@ -1212,7 +1210,7 @@ $PMA_SQPdata_forbidden_word = array (
  *
  * @global integer MySQL forbidden words count
  */
-$PMA_SQPdata_forbidden_word_cnt = 483;
+$PMA_SQPdata_forbidden_word_cnt = 482;
 
 /**
  * the MySQL column/data types
